1. Подключил БД в файле application.propertes (ddl-auto=update). 2. Добавил в зависимости стартер Spring JPA, драйвер PostgreSQL. 3. Привёл класс pojo.Employee к @Entity. 4. Унаследовал интерфейс EmployeeRepository от JpaRepository. 5. Перезаписал 5 эндпоинтов в контроллере.